# spiffers

./: .envrc  .gitignore  Cargo.toml  README.md  build.rs  flake.nix
nix/: dev-shell.nix  overlay.nix  spiffers.nix
protos/spire/common/: README.md
src/: client.rs  completion.rs  config.rs  main.rs  server.rs
src/cli/: agent.rs  mod.rs  server.rs
src/config/: mod.rs  server.rs
src/datastore/: create_tables.sql  sqlite.rs
