[package]
name = "spiffers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = [ "derive" ] }
clap_complete = "4.1.2"
prost = "0.11.6"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "sqlite" ] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.8.3"

[build-dependencies]
tonic-build = "0.8.4"
